crates/pandalang/src/eval/snapshots/pandalang__eval__tests__evals_exprs@str__empty.panda.snap
---
source: crates/pandalang/src/eval/mod.rs
expression: test_expr(path)
input_file: crates/pandalang/src/snapshot_inputs/exprs/str/empty.panda
---
Ok(
    Str(
        Str {
            s: "",
        },
    ),
)
